# frontiers-hackathon

./: .gitignore  Cargo.toml  Dockerfile  README.md  dashboard.py  docker-compose.yml
abi/: PolygonRollupBaseEtrog.json  PolygonRollupManager.json  PolygonZkEVMBridge.json  PolygonZkEVMBridgeV2.json
daggboard-frontend/: README.md  bridges.json  claims.json  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
daggboard-frontend/src/: App.tsx  index.css
daggboard-frontend/src/components/: ErrorBoundary.tsx  HomePage.tsx  RollupDetailPage.tsx
daggboard-frontend/src/components/charts/: BalanceChart.tsx  HealthStatusChart.tsx  OverviewChart.tsx  SankeyChart.tsx  index.ts
daggboard-frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ErrorMessage.tsx  Loading.tsx  index.ts
daggboard-frontend/src/hooks/: useApi.ts  useApi.ts.backup  useDatabase.ts
daggboard-frontend/src/utils/: api.ts  database.ts.bak  formatting.ts
src/: api.rs  contracts.rs  database.rs  indexer.rs  lib.rs  main.rs  utils.rs
