[package]
name = "daggboard"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.20", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
] }

# async
futures-util = "0.3"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "full", "signal"] }

futures = "0.3"
# misc
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
alloy-sol-types = "0.8.22"

clap = { version = "4.0", features = ["derive"] }

duckdb = { version = "1.2.1", features = ["bundled"] }
sha2 = "0.10.8"

axum = "0.8.1"

 